--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
+    "performance-now": "^2.1.0",
     "pg": "^7.8.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
