--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "path": "^0.12.7",
     "performance-now": "^2.1.0",
     "pg": "^7.8.1",
+    "pg-promise": "^8.5.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-modal": "^3.8.1",
