--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.17",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "pg": "^7.8.1",
