--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode 'development' -w",
     "build-prod": "webpack -p --mode 'production'",
-    "withCluster": "nodemon withCluster",
+    "withCluster": "node index.js",
     "test": "jest",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
