docker files initiated

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "start" : "node withCluster.js",
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode 'development' -w",
     "build-prod": "webpack -p --mode 'production'",
-    "withCluster": "node index.js",
-    "test": "jest",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
